--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,8 @@ body {
   position: fixed;
   padding: 27px 0;
   background: #fff;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
+  z-index: 2;
 }
 
 .header__body {
@@ -31,12 +33,10 @@ body {
   display: flex;
   justify-content: space-around;
   position: relative;
-  z-index: 3;
 }
 
 .header__icons {
   position: relative;
-  z-index: 3;
 }
 
 .header__link {
@@ -60,102 +60,43 @@ body {
 }
 
 .header__link:hover {
-  border-bottom: 3px solid #22262a;
-  text-shadow: 0 0 10px rgba(96, 11, 104, 0.5);
+  text-shadow: 0 0 10px rgba(41, 40, 41, 0.5);
 }
 
 .header__logo {
   position: relative;
-  z-index: 4;
 }
 
 .header:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: #fff;
-  z-index: 3;
 }
 
 svg:hover {
-  filter: drop-shadow(0 0 10px rgba(96, 11, 104, 0.5));
-}
-
-@media (max-width: 767px) {
-  .header__burger {
-    display: block;
-    position: relative;
-    width: 30px;
-    height: 20px;
-    position: relative;
-    z-index: 4;
-  }
-  .header__burger:before,
-  .header__burger:after {
-    content: '';
-    background-color: #000;
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    left: 0;
-  }
-  .header__burger span {
-    position: absolute;
-    background-color: #000;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    top: 9px;
-  }
-  .header__burger:before {
-    top: 0;
-  }
-  .header__burger:after {
-    bottom: 0;
-  }
-  .header__burger .active:before {
-    transform: rotate(45deg);
-  }
-  .header__list li a {
-    color: #fff;
-  }
-  .header__list li {
-    margin: 0px 0px 20px 0px;
-  }
-  .header__menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(2, 2, 2, 0.9);
-    color: #fff;
-    padding: 120px 10px 20px 10px;
-  }
-  .header__list {
-    display: block;
-  }
+  filter: drop-shadow(0 0 10px rgba(41, 40, 41, 0.5));
 }
 
 .main {
   background: url("../img/1.png");
+  display: block;
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
   background-size: cover;
-  position: relative;
   top: 80px;
-  z-index: -1;
+  background-position: center center;
+  position: relative;
 }
 
 .main__block {
   position: absolute;
-  bottom: 101px;
-  right: 170px;
-  z-index: -1;
+  bottom: calc((101 / 1593) * 100%);
+  right: calc((170 / 1593) * 100%);
 }
 
 .main__undertitle {
@@ -192,17 +133,24 @@ svg:hover {
   margin-right: 34px;
 }
 
+.main__button:hover {
+  background: #fff;
+  color: #22262a;
+  font-weight: 600;
+}
+
 .main__two {
   padding: 4px 24px;
 }
 
 .category {
-  padding-top: 70px;
+  padding-top: 160px;
   padding-bottom: 70px;
 }
 
 .category__block {
   display: flex;
+  flex: 0 0 30%;
   justify-content: space-between;
   height: 574px;
 }
@@ -224,7 +172,6 @@ svg:hover {
 
 .category__block-three {
   position: relative;
-  z-index: -1;
 }
 
 .category__button {
@@ -238,6 +185,11 @@ svg:hover {
   font-weight: 500;
   font-size: 18px;
   line-height: 27px;
+}
+
+.category__button:hover {
+  color: #fff;
+  background: #22262a;
 }
 
 .title {
@@ -260,13 +212,13 @@ svg:hover {
   padding-bottom: 70px;
 }
 
-.card__cart-items {
+.cart-items {
   display: flex;
   justify-content: space-between;
   padding-top: 65px;
 }
 
-.card__name {
+.name {
   padding-top: 28px;
   font-weight: 300;
   font-size: 15px;
@@ -274,14 +226,14 @@ svg:hover {
   margin-bottom: 3px;
 }
 
-.card__subtitle {
-  font-weight: 600;
+.subtitle {
+  font-weight: 400;
   font-size: 15px;
   line-height: 22px;
   margin-top: 3px;
 }
 
-.card__price {
+.price {
   display: flex;
   width: 50%;
   justify-content: space-between;
@@ -291,46 +243,7 @@ svg:hover {
   line-height: 22px;
 }
 
-.card__new-price {
-  color: #cf2929;
-}
-
-.men {
-  padding-bottom: 70px;
-}
-
-.men__cart-items {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 65px;
-}
-
-.men__name {
-  padding-top: 28px;
-  font-weight: 300;
-  font-size: 15px;
-  line-height: 22px;
-  margin-bottom: 3px;
-}
-
-.men__subtitle {
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 22px;
-  margin-top: 3px;
-}
-
-.men__price {
-  display: flex;
-  width: 50%;
-  justify-content: space-between;
-  margin-top: 3px;
-  font-weight: normal;
-  font-size: 15px;
-  line-height: 22px;
-}
-
-.men__new-price {
+.new-price {
   color: #cf2929;
 }
 
@@ -339,7 +252,8 @@ svg:hover {
 }
 
 .avone__wrap {
-  display: flex;
+  display: inline-flex;
+  flex: 0 0 30%;
   justify-content: space-around;
 }
 
@@ -354,9 +268,9 @@ svg:hover {
 
 .avone__block-three {
   display: flex;
+  flex: 0 0 30%;
   align-items: flex-end;
   position: relative;
-  z-index: -1;
   padding-left: 152px;
   top: -45px;
 }
@@ -377,13 +291,16 @@ svg:hover {
   padding-bottom: 20px;
 }
 
+.avone__link:hover {
+  text-shadow: 0 0 10px rgba(41, 40, 41, 0.5);
+}
+
 .tachen {
   background-image: url("../img/17.png");
   background-repeat: no-repeat;
   height: 100%;
   background-size: cover;
   position: relative;
-  z-index: -1;
 }
 
 .tachen__block {
@@ -416,6 +333,12 @@ svg:hover {
   line-height: 27px;
   text-align: center;
   margin-right: 34px;
+}
+
+.tachen__button:hover {
+  background: #fff;
+  color: #22262a;
+  font-weight: 600;
 }
 
 .footer {
@@ -503,6 +426,10 @@ svg:hover {
   text-decoration: none;
   color: #22262a;
   margin-right: 88px;
+}
+
+.menu-item-link:hover {
+  text-shadow: 0 0 10px rgba(41, 40, 41, 0.5);
 }
 
 .title {
