--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html,
 body {
   width: 100%;
@@ -89,7 +90,6 @@ svg:hover {
   height: 100%;
   background-size: cover;
   top: 80px;
-  background-position: center center;
   position: relative;
 }
 
@@ -213,13 +213,33 @@ svg:hover {
 }
 
 .cart-items {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 65px;
+  min-width: 0;
+  padding: 35px 0px 35px 0px;
+  position: relative;
+}
+
+.cart-items .slick-arrow {
+  position: absolute;
+  top: 40%;
+  z-index: 10;
+  font-size: 0;
+  width: 30px;
+  height: 60px;
+  border: none;
+}
+
+.cart-items .slick-arrow.slick-prev {
+  left: 10;
+  background: url("../img/arrow-prew.svg") 0 0/100% no-repeat;
+}
+
+.cart-items .slick-arrow.slick-next {
+  right: 13px;
+  background: url("../img/arrow-next.svg") 0 0/100% no-repeat;
 }
 
 .name {
-  padding-top: 28px;
+  padding-top: 15px;
   font-weight: 300;
   font-size: 15px;
   line-height: 22px;
@@ -247,6 +267,35 @@ svg:hover {
   color: #cf2929;
 }
 
+/* Слайдер */
+.slick-slider {
+  min-width: 0;
+}
+
+/* Слайдер запущен */
+/* Слайдер с точками */
+/* Ограничивающая оболочка */
+.slick-list {
+  overflow: hidden;
+}
+
+/* Лента слайдов */
+.slick-track {
+  display: flex;
+}
+
+/* Слайд */
+/* Слайд активный (показывается) */
+/* Слайд основной */
+/* Слайд по центру */
+/* Клонированный слайд */
+/* Стрелка */
+/* Стрелка влево */
+/* Стрелка вправо */
+/* Стрелка не активная */
+/* Точки (булиты) */
+/* Активная точка */
+/* Элемент точки */
 .avone {
   padding-bottom: 40px;
 }
