--- a/css/main.scss
+++ b/css/main.scss
@@ -83,7 +83,6 @@ svg:hover {
   height: 100%;
   background-size: cover;
   top: 80px;
-  background-position: center center;
 
   position: relative;
   &__block {
@@ -129,6 +128,9 @@ svg:hover {
   &__two {
     padding: 4px 24px;
   }
+}
+@media(max-width:1330px){
+  
 }
 .category {
   padding-top: 160px;
@@ -189,13 +191,34 @@ svg:hover {
 .card {
   padding-bottom: 70px;
 }
-.cart-items {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 65px;
+.cart-items{
+  min-width: 0;
+  padding: 35px 0px 35px 0px;
+  position: relative;
+  
+}
+.cart-items .slick-arrow {
+ // display: flex;
+ // justify-content: space-between;
+ // padding-top: 35px;
+ position: absolute;
+ top:40%;
+ z-index: 10;
+ font-size: 0;
+ width: 30px;
+ height: 60px;
+ border: none;
+}
+.cart-items .slick-arrow.slick-prev{
+  left:10;
+  background: url('../img/arrow-prew.svg') 0 0 / 100% no-repeat;
+}
+.cart-items .slick-arrow.slick-next{
+  right:13px;
+  background: url('../img/arrow-next.svg') 0 0 / 100% no-repeat;
 }
 .name {
-  padding-top: 28px;
+  padding-top: 15px;
   font-weight: 300;
   font-size: 15px;
   line-height: 22px;
@@ -219,7 +242,47 @@ svg:hover {
 .new-price {
   color: #cf2929;
 }
-
+/* Слайдер */
+.slick-slider{
+  min-width: 0;
+}
+/* Слайдер запущен */
+.slick-slider.slick-initialized{}
+/* Слайдер с точками */
+.slick-slider.slick-dotted{}
+/* Ограничивающая оболочка */
+.slick-list {
+  overflow: hidden;
+}
+/* Лента слайдов */
+.slick-track{
+  display: flex;
+}
+/* Слайд */
+.slick-slide{}
+/* Слайд активный (показывается) */
+.slick-slide.slick-active{}
+/* Слайд основной */
+.slick-slide.slick-current{}
+/* Слайд по центру */
+.slick-slide.slick-center{}
+/* Клонированный слайд */
+.slick-slide.slick-cloned{}
+/* Стрелка */
+.slick-arrow{}
+/* Стрелка влево */
+.slick-arrow.slick-prev{}
+/* Стрелка вправо */
+.slick-arrow.slick-next{}
+/* Стрелка не активная */
+.slick-arrow.slick-disabled{}
+/* Точки (булиты) */
+.slick-dots{}
+.slick-dots li{}
+/* Активная точка */
+.slick-dots li.slick-active{}
+/* Элемент точки */
+.slick-dots li button{}
 .avone {
   padding-bottom: 40px;
   &__wrap {
